--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,7 @@ body {
   background-image: url("../images/background.jpg");
   background-size: cover;
   background-position: bottom right;
+  background-attachment: fixed;
 }
 
 /* Menu */
@@ -65,6 +66,7 @@ li a[role=button] {
 li a[role=button]:hover {
   background-color: #e24d50
 }
+
 /* Main */
 
 h1, div {
@@ -77,6 +79,7 @@ h1 {
   font-size: 6em;
   line-height: 0.85em;
   font-weight: 100;
+  cursor: default;
 }
 div {
   width: 350px;
@@ -84,6 +87,7 @@ div {
 div p {
   color: #757e83;
   margin-bottom: 40px;
+  cursor: default;
 }
 div a[role=button] {
   text-decoration: none;
@@ -100,11 +104,9 @@ div a[role=button]:nth-last-child(1) {
   color: #000;
   margin-left: 1vw;
 }
-
 div a[role=button]:hover {
   background-color: #e24d50
 }
-
 div a[role=button]:nth-last-child(1):hover {
   background-color: #f7f4f4;
 }
